--- a/HelpBook/GBSHelpBookPaletteViewController.xib
+++ b/HelpBook/GBSHelpBookPaletteViewController.xib
@@ -43,26 +43,59 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="NSTextField" id="1065425732">
+					<object class="NSButton" id="579730564">
 						<reference key="NSNextResponder" ref="170387868"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{112, 91}, {148, 19}}</string>
+						<string key="NSFrame">{{109, 43}, {150, 18}}</string>
 						<reference key="NSSuperview" ref="170387868"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="144358403"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="291343197">
-							<int key="NSCellFlags">-1804599231</int>
-							<int key="NSCellFlags2">272761856</int>
-							<string key="NSContents"/>
+						<object class="NSButtonCell" key="NSCell" id="776876876">
+							<int key="NSCellFlags">-2080374784</int>
+							<int key="NSCellFlags2">268566528</int>
+							<string key="NSContents">Increase after exporting</string>
 							<object class="NSFont" key="NSSupport" id="26">
 								<string key="NSName">LucidaGrande</string>
 								<double key="NSSize">11</double>
 								<int key="NSfFlags">3100</int>
 							</object>
 							<string key="NSCellIdentifier">_NS:9</string>
-							<reference key="NSControlView" ref="1065425732"/>
+							<reference key="NSControlView" ref="579730564"/>
+							<int key="NSButtonFlags">1211912448</int>
+							<int key="NSButtonFlags2">2</int>
+							<object class="NSCustomResource" key="NSNormalImage">
+								<string key="NSClassName">NSImage</string>
+								<string key="NSResourceName">NSSwitch</string>
+							</object>
+							<object class="NSButtonImageSource" key="NSAlternateImage">
+								<string key="NSImageName">NSSwitch</string>
+							</object>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
+						</object>
+						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+					</object>
+					<object class="NSTextField" id="869794071">
+						<reference key="NSNextResponder" ref="170387868"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{112, 66}, {148, 19}}</string>
+						<reference key="NSSuperview" ref="170387868"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="579730564"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSTextFieldCell" key="NSCell" id="549086033">
+							<int key="NSCellFlags">-1804599231</int>
+							<int key="NSCellFlags2">272761856</int>
+							<string key="NSContents"/>
+							<reference key="NSSupport" ref="26"/>
+							<string key="NSPlaceholderString"/>
+							<string key="NSCellIdentifier">_NS:9</string>
+							<reference key="NSControlView" ref="869794071"/>
 							<bool key="NSDrawsBackground">YES</bool>
 							<object class="NSColor" key="NSBackgroundColor" id="922810112">
 								<int key="NSColorSpace">6</int>
@@ -85,24 +118,24 @@
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 					</object>
-					<object class="NSTextField" id="172572176">
+					<object class="NSTextField" id="860419057">
 						<reference key="NSNextResponder" ref="170387868"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{64, 93}, {43, 14}}</string>
+						<string key="NSFrame">{{14, 68}, {93, 14}}</string>
 						<reference key="NSSuperview" ref="170387868"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1065425732"/>
+						<reference key="NSNextKeyView" ref="869794071"/>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="24828678">
+						<object class="NSTextFieldCell" key="NSCell" id="152249280">
 							<int key="NSCellFlags">68157504</int>
 							<int key="NSCellFlags2">71435264</int>
-							<string key="NSContents">Locale:</string>
+							<string key="NSContents">Bundle Version:</string>
 							<object class="NSFont" key="NSSupport" id="781530432">
 								<string key="NSName">LucidaGrande-Bold</string>
 								<double key="NSSize">11</double>
 								<int key="NSfFlags">16</int>
 							</object>
-							<reference key="NSControlView" ref="172572176"/>
+							<reference key="NSControlView" ref="860419057"/>
 							<object class="NSColor" key="NSBackgroundColor" id="205775935">
 								<int key="NSColorSpace">6</int>
 								<string key="NSCatalogName">System</string>
@@ -118,6 +151,47 @@
 								<string key="NSColorName">controlTextColor</string>
 								<reference key="NSColor" ref="255295638"/>
 							</object>
+						</object>
+						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+					</object>
+					<object class="NSTextField" id="1065425732">
+						<reference key="NSNextResponder" ref="170387868"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{112, 91}, {148, 19}}</string>
+						<reference key="NSSuperview" ref="170387868"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="860419057"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSTextFieldCell" key="NSCell" id="291343197">
+							<int key="NSCellFlags">-1804599231</int>
+							<int key="NSCellFlags2">272761856</int>
+							<string key="NSContents"/>
+							<reference key="NSSupport" ref="26"/>
+							<string key="NSCellIdentifier">_NS:9</string>
+							<reference key="NSControlView" ref="1065425732"/>
+							<bool key="NSDrawsBackground">YES</bool>
+							<reference key="NSBackgroundColor" ref="922810112"/>
+							<reference key="NSTextColor" ref="152637726"/>
+						</object>
+						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+					</object>
+					<object class="NSTextField" id="172572176">
+						<reference key="NSNextResponder" ref="170387868"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{64, 93}, {43, 14}}</string>
+						<reference key="NSSuperview" ref="170387868"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="1065425732"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSTextFieldCell" key="NSCell" id="24828678">
+							<int key="NSCellFlags">68157504</int>
+							<int key="NSCellFlags2">71435264</int>
+							<string key="NSContents">Locale:</string>
+							<reference key="NSSupport" ref="781530432"/>
+							<reference key="NSControlView" ref="172572176"/>
+							<reference key="NSBackgroundColor" ref="205775935"/>
+							<reference key="NSTextColor" ref="539236676"/>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 					</object>
@@ -591,6 +665,42 @@
 					</object>
 					<int key="connectionID">101</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: bundleVersion</string>
+						<reference key="source" ref="869794071"/>
+						<reference key="destination" ref="1001"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="869794071"/>
+							<reference key="NSDestination" ref="1001"/>
+							<string key="NSLabel">value: bundleVersion</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">bundleVersion</string>
+							<object class="NSDictionary" key="NSOptions">
+								<string key="NS.key.0">NSNullPlaceholder</string>
+								<string key="NS.object.0">0.00.1</string>
+							</object>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">112</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: increasesBundleVersionAutomatically</string>
+						<reference key="source" ref="579730564"/>
+						<reference key="destination" ref="1001"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="579730564"/>
+							<reference key="NSDestination" ref="1001"/>
+							<string key="NSLabel">value: increasesBundleVersionAutomatically</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">increasesBundleVersionAutomatically</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">110</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -633,6 +743,9 @@
 							<reference ref="140165002"/>
 							<reference ref="172572176"/>
 							<reference ref="1065425732"/>
+							<reference ref="860419057"/>
+							<reference ref="869794071"/>
+							<reference ref="579730564"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -783,12 +896,65 @@
 						<reference key="object" ref="24828678"/>
 						<reference key="parent" ref="172572176"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">102</int>
+						<reference key="object" ref="860419057"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="152249280"/>
+						</array>
+						<reference key="parent" ref="170387868"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">103</int>
+						<reference key="object" ref="869794071"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="549086033"/>
+						</array>
+						<reference key="parent" ref="170387868"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">104</int>
+						<reference key="object" ref="549086033"/>
+						<reference key="parent" ref="869794071"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">105</int>
+						<reference key="object" ref="152249280"/>
+						<reference key="parent" ref="860419057"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">107</int>
+						<reference key="object" ref="579730564"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="776876876"/>
+						</array>
+						<reference key="parent" ref="170387868"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">108</int>
+						<reference key="object" ref="776876876"/>
+						<reference key="parent" ref="579730564"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="-3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="102.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="103.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="104.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="105.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<object class="NSMutableDictionary" key="107.IBAttributePlaceholdersKey">
+					<string key="NS.key.0">ToolTip</string>
+					<object class="IBToolTipAttribute" key="NS.object.0">
+						<string key="name">ToolTip</string>
+						<reference key="object" ref="579730564"/>
+						<string key="toolTip">After each export, the version number will be increased.</string>
+					</object>
+				</object>
+				<string key="107.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="108.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -818,13 +984,13 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">101</int>
+			<int key="maxID">112</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">GBSHelpBookPaletteViewController</string>
-					<string key="superclassName">GBSStaticClass_VPUPaletteViewController</string>
+					<string key="superclassName">placeholder_class</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">export:</string>
 						<string key="NS.object.0">id</string>
@@ -842,11 +1008,11 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">GBSStaticClass_VPUPaletteViewController</string>
+					<string key="className">VPUPaletteViewController_GBSPlaceholderClass</string>
 					<string key="superclassName">NSViewController</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/GBSStaticClass_VPUPaletteViewController.h</string>
+						<string key="minorKey">./Classes/VPUPaletteViewController_GBSPlaceholderClass.h</string>
 					</object>
 				</object>
 			</array>
@@ -859,5 +1025,9 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">NSSwitch</string>
+			<string key="NS.object.0">{15, 15}</string>
+		</object>
 	</data>
 </archive>
